@@ -94,6 +94,9 @@ if ( isset($_POST['StoreGeoIPConfiguration']) ) {
         ),
         'MaxMindDetectionType' => new ezcInputFormDefinitionElement(
             ezcInputFormDefinitionElement::OPTIONAL, 'string'
+        ),
+        'CityGeoLocation' => new ezcInputFormDefinitionElement(
+            ezcInputFormDefinitionElement::OPTIONAL, 'string'
         )
     );
 
@@ -159,9 +162,10 @@ if ( isset($_POST['StoreGeoIPConfiguration']) ) {
                 }
             } elseif ($form->UseGeoIP == 'max_mind') {
                 $data['geo_service_identifier'] = 'max_mind';                
-                $data['max_mind_detection_type'] = $form->MaxMindDetectionType;
-                
-                if ($data['max_mind_detection_type'] == 'city' && !file_exists('var/external/geoip/GeoLite2-City.mmdb')) {
+                $data['max_mind_detection_type'] = $form->hasValidData('MaxMindDetectionType') ? $form->MaxMindDetectionType : 'city';
+                $data['max_mind_city_location'] = $form->CityGeoLocation != '' ? $form->CityGeoLocation : 'var/external/geoip/GeoLite2-City.mmdb';
+                          
+                if ($data['max_mind_detection_type'] == 'city' && !file_exists($data['max_mind_city_location'])) {
                 	$Errors[] = erTranslationClassLhTranslation::getInstance()->getTranslation('chat/onlineusers','MaxMind city file does not exists!');
                 } elseif (!file_exists('var/external/geoip/GeoLite2-Country.mmdb')) {
                 	$data['max_mind_detection_type'] = 'country';
@@ -169,7 +173,7 @@ if ( isset($_POST['StoreGeoIPConfiguration']) ) {
                 }
                 
                 if (empty($Errors)) {
-	                $responseDetection = erLhcoreClassModelChatOnlineUser::getUserData('max_mind','94.23.200.91',array('detection_type' => $data['max_mind_detection_type']));                
+	                $responseDetection = erLhcoreClassModelChatOnlineUser::getUserData('max_mind','94.23.200.91',array('city_file' => $data['max_mind_city_location'],'detection_type' => $data['max_mind_detection_type']));                
 	                if ( $responseDetection == false || !isset($responseDetection->country_code) || !isset($responseDetection->country_name) ) {
 	                    $Errors[] = erTranslationClassLhTranslation::getInstance()->getTranslation('chat/onlineusers','Setting service provider failed, please check that MaxMind database files exists!');
 	                }
